tests/conditional/conditional.exp
Error ----------------------------------------------------- conditional.js:23:24

Error: conditional.js:23
 23:   return (x != null) ? x : (x != null);
                            ^ Cannot return `x != null ? x : x != null` because number [1] is incompatible with string [2].
  References:
   22:   var x: ?number = null;
                 ^^^^^^ [1]: number
   20: function d(): string { // expected `: number | boolean`
                     ^^^^^^ [2]: string

Error ----------------------------------------------------- conditional.js:23:29

Error: conditional.js:23
 23:   return (x != null) ? x : (x != null);
                                 ^^^^^^^^^ Cannot return `x != null ? x : x != null` because boolean [1] is incompatible with string [2].
  References:
   23:   return (x != null) ? x : (x != null);
                                   ^^^^^^^^^ [1]: boolean
   20: function d(): string { // expected `: number | boolean`
                     ^^^^^^ [2]: string


Found 2 errors
